# servo-sysid

./: .gitignore  README.md  data.json  pyproject.toml  test.py
src/sysid/: batched_job.py  cli.py  collect.py  collect_real.py  collect_sim.py  config.py  data_interface.py  env.py  generate_actions.py  hardware.py  nes.py  record_real.py  training.py  util.py
src/sysid/data_pipeline/: collect_real.py  data_interface.py  generate_actions.py  process_data.py
src/sysid/dataset/: actions-dataset.json  actions.json  dataset.json  drop-response-1.json  drop-response-2.json  drop-response-3.json  drop-response-4.json  response.json  responses.json  sim-action-state-dataset.json
src/sysid/desc/: robot.xml
src/sysid/desc/meshes/: arm.stl  screw_0.stl  screw_1.stl  screw_2.stl  screw_3.stl  screw_4.stl  screw_5.stl  screw_6.stl  screw_7.stl  sensor.stl  servo.stl  servo_horn.stl  servo_support.stl  weight.stl  weight_holder.stl
src/sysid/notebooks/: check_action_ds.ipynb  plot_real_aciton_states.ipynb  plot_real_action_states.ipynb  process_data.ipynb  test.ipynb
